ApiGateway/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: APORI
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 9376
